Fug fix to hide add field button when resource has records

--- a/ckanext/resourcedictionary/templates/dictionary/dictionary.html
+++ b/ckanext/resourcedictionary/templates/dictionary/dictionary.html
@@ -27,7 +27,7 @@
     <button class="btn btn-primary" id="dictionary-save-button" name="save" type="submit">
       <i class="fa fa-book"></i> {{ _('Save') }}
     </button>
-    {% if not records %}
+    {% if not total_records %}
       <a class="btn btn-info pull-right" id="add-field-button">
         <span class="fa fa-plus-square"></span>
         <span class="fa-label">{{_('Add Field')}}</span>
